ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -15,7 +15,7 @@
         <td>
 
                 <div class="midphoto">
-                    <img id="midphoto"src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="First slide">
+                    <img id="midphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="First slide">
                 </div>
 
 
@@ -38,7 +38,7 @@
 
                     <ol>
 
-                       <p >Größe</p>
+
                             <select name="size">
                                 <option value="wählen"><strong>Wählen</strong></option>
                                 <option value="XS">XS</option>
@@ -65,10 +65,10 @@
     </tr>
     <tr>
 
-        <td  valign="middle" align="center" colspan="3">
+        <td  class ="beschreibung" valign="middle" align="center" colspan="3">
             <p style="margin-top: 30px"><strong>Business-Bluse aus Baumwollmix</strong></p>
             <p id ="produktDetails">
-              Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße
+              "Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße"
         </p></td>
     </tr>
 
