--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -15,7 +15,7 @@
         <td>
 
                 <div class="midphoto">
-                    <img id="midphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="First slide">
+                    <img id="midphoto"src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="First slide">
                 </div>
 
 
@@ -34,20 +34,16 @@
 
 
             <div id = "button1">
-                <ul>
+                <ul id="dropdown">
+                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn  " >Größe</button> </a>
+                        <ol id class="dropdown-menu">
 
-                    <ol>
-
-
-                            <select name="size">
-                                <option value="wählen"><strong>Wählen</strong></option>
-                                <option value="XS">XS</option>
-                                <option value="S">S</option>
-                                <option value="M">M</option>
-                                <option value="L">L</option>
-                                <option value="XL">XL</option>
-                            </select>
-
+                            <li><a href="#">XS</a></li>
+                            <li><a href="#">S</a></li>
+                            <li><a href="#">M</a></li>
+                            <li><a href="#">L</a></li>
+                            <li><a href="#">XL</a></li>
+                        </ol>
                     </ol>
                 </ul>
             </div>
@@ -65,13 +61,11 @@
     </tr>
     <tr>
 
-        <td  class ="beschreibung" valign="middle" align="center" colspan="3">
+        <td  valign="middle" align="center" colspan="3">
             <p style="margin-top: 30px"><strong>Business-Bluse aus Baumwollmix</strong></p>
             <p id ="produktDetails">
-              "Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße"
+              Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße
         </p></td>
     </tr>
-
-
-
 </table>
+
