--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,141 +1,3 @@
-@import "../../node_modules/bootstrap/less/bootstrap";
-
-/* Space out content a bit */
-body {
-    padding-bottom: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
-/* Custom page header */
-.header {
-
-    height: 50px;
-    width: auto;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.button {
-    height: 10px;
-    width: 10px;
-
-}
-
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 10px;
-}
-
-.jumbotron {
-    background-image: url("https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif");
-    text-align: center;
-    color: white;
-}
-
-
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-    .container {
-        max-width: 730px;
-        text-align: center;
-    }
-}
-.container-narrow > hr {
-    margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.fotos {
-    text-align: left;
-;
-}
-.hauptFoto {
-    text-align: center;
-; }
-.button {
-    text-align: center;
-;}
-
-#positionB
-{
-    margin-left: 50px;
-}
-
-
-/*Test Webshop*/
-.Segment{
-    position:absolute;
-    left:0;
-}
-.produktShop .produktShopName span {
-    color: #fff;
-}
-.produktShop .aProdukt{
-    margin-top: 20px;
-    width: 220px;
-    heigth:250px;
-}
-
-
-.produktShop .produktShopName {
-    background-color: rgba(7, 7, 7, 0.65);
-    color: #8b7f48;
-    margin-top: -30px;
-    position: relative;
-    text-align: center;
-    width: 100%;
-    z-index: 1;
-    height: 50px;
-    overflow: hidden;
-}
-.thumbnail img {
-    width: 220px;
-    height: 250px;
-}
-
-.produktShopName span {
-    line-height: 30px;
-    position: relative;
-    top: -10px;
-}
-
-/*ProduktDetail*/
-
-#produktDetails
-{
-    margin-left: 350px ;
-    margin-right: 350px;
-}
-@import "../../node_modules/bootstrap/less/bootstrap";
-
-.grad{
-
-
-    margin-bottom: 30px;
-    width:20px;
-    height:20px;
-    border-radius:50px;
-    background:linear-gradient(to bottom, #FF0000 , #FF0000 )}
-
-
 .midphoto
 {
     margin-left : 200px;
@@ -189,6 +51,11 @@ body {
 {
     margin-left: 100px;
 }
-#yes{
-    margin-bottom: 0px;
+.grad{
+
+    margin-bottom: 30px;
+    width:20px;
+    height:20px;
+    border-radius:50px;
+    background:linear-gradient(to bottom, #FF0000 , #FF0000 )
 }
