--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -12,6 +12,11 @@
 {
     margin-left: 0px;
 }
+    #Groesse
+    {
+        margin-left: 5px ;
+        margin-bottom: -2px;
+    }
 #button11
 
 {
