--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -17,7 +17,12 @@
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
             <!-- build:css css/app.css --> 
     <link href="css/style.css" rel="stylesheet">
-    <link href="/Users/admin/Documents/bootstrap-starter/app/less/produktAnsicht.css" type = "text/css" rel="stylesheet">
+    <script type="text/javascript" src="Event.js"></script>
+    <script type="text/javascript" src="Magnifier.js"></script>
+    <script type="text/javascript">
+        var evt = new Event(),
+                m = new Magnifier(evt);
+    </script>
          <!-- endbuild --> 
 </head>
   <!-- NAVBAR ================================================== --> 
