--- a/app/less/style.less
+++ b/app/less/style.less
@@ -18,17 +18,17 @@ body {
 
 /* Custom page header */
 .header {
-
   height: 50px;
   width: auto;
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
+  font-family: "Shree Devanagari 714";
 }
 
-.button {
-  height: 10px;
-  width: 10px;
-
+.navbar-header {
+  font-family: "Shree Devanagari 714";
+  font-size: 300%;
+  color: #000;
 }
 
 /* Make the masthead heading the same height as the navigation */
@@ -39,17 +39,30 @@ body {
 }
 
 .jumbotron {
-  background-image: url("https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif");
+  background-image: url("https://media.giphy.com/media/IIBB5X1izB16/giphy.gif");
+  height: 660px;
+  vertical-align: middle;
   text-align: center;
-  color: white;
 }
 
+.row {
+  font-family: "Shree Devanagari 714";
+  color: darkred;
+  text-align: center;
+  border-bottom-style: double;
+  border-bottom-color: darkgoldenrod;
+  border-bottom-width: 2px;
+  border-top-style: double;
+  border-top-color: darkgoldenrod;
+  border-top-width: 2px;
+}
 
 /* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  font-family: "Shree Devanagari 714";
 }
 
 /* Customize container */
