--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -30,24 +30,25 @@
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         <div class="navbar-header"> 
-            <a class="btn btn-link" href="index.html">PTTP</a>
+            <a href="index.html">PTTP</a>
              
              
         </div>
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
-                <a class="glyphicon glyphicon-user" class="btn btn-default" href=#"> SIGN UP</a>
+                <a class="glyphicon glyphicon-user" , class="btn btn-default" href="#"> SIGN UP</a>
             </li>
 
             <li>
-                <a class="glyphicon glyphicon-log-in" class="btn btn-default" href=#"> LOG IN</a>
+                <a class="glyphicon glyphicon-log-in" , class="btn btn-default" href="#"> LOG IN</a>
             </li>
-             
+
             <li class="dropdown"> 
+
+
                 <button class="btn btn-default" ‚ class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-align-justify"></span></button>
-                 
                 <span class="caret"></span></a> 
                 <ul class="dropdown-menu"> 
 
@@ -62,7 +63,7 @@
                     <li><a href="#">ABOUT US</a></li>
                      
                 </ul>
-                 
+
             </li>
              
         </ul>
