--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -1,6 +1,6 @@
 <footer class="footer"> 
     <p class="pull-right">
-        <a href="#">Back to top</a></p>  <p>&copy; 2016 Company, Inc. &middot;
+        <a href="#" , class="back-to-top"> Back to Top</a></p>  <p>&copy; 2016 Company, Inc. &middot;
         <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> 
 </footer>
  </div>
