Web Shop simple Komentare eingefügt

--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,5 +1,5 @@
 
-
+<!-- Kategorienauswahl -->
 <div class="container">
     <div class="list-group-Segment">
         <a href="#" class="list-group-item">Shirts</a>
@@ -7,17 +7,21 @@
         <a href="#" class="list-group-item">Pullover</a>
         <a href="#" class="list-group-item">Jacken</a>
     </div>
-
+<!-- Produnktpräsenationsbereich-->
+    <!-- Zur Zeit 3 Reihen a 3 Produkte -->
     <div class="row produktShop" >
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
+                <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
                 <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
+                        <!-- wird auf Produktbild gelegt-->
                         <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
+            <!-- Bsp wie Artistlink einzubinden-->
             <a href="#"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
