--- a/app/less/webShop.less
+++ b/app/less/webShop.less
@@ -1,10 +1,12 @@
-/*Test Webshop*/
+/*Design Websho*/
+
+/*Design Kategorienauswahl*/
 .list-group-Segment{
   position:absolute;
   left:1px;
   margin-top:20px;
 }
-
+/*Design Bereich der Produktpräsentation*/
 .produktShop .produktShopName span {
   color: #fff;
 }
