Basic Artistansicht /artistlistansicht Platzhalter

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,6 +1,8 @@
 @import "../../node_modules/bootstrap/less/bootstrap";
 @import "produktAnsicht";
 @import "webShop";
+@import "artistAnsicht";
+@import "artistListAnsicht";
 
 /* Space out content a bit */
 body {
