Basic Artistansicht /artistlistansicht Platzhalter 2

--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -1,10 +1,116 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<!-- Produnktpräsenationsbereich-->
+<!-- Zur Zeit 3 Reihen a 3 Produkte -->
+<div class="row artistListAnsicht" >
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="row artistListAnsicht" >
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="row artistListAnsicht" >
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="aArtist col-md-12">
+        <a class="thumbnail" href="/artistAnsicht.html">
+            <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
+            <img  src="http://digitalmofo.com/wp-content/plugins/rss-poster/cache/7947b_logo-example.jpg" >
+            <div class="wrapper">
+                <div class="caption artistName">
+                    <!-- wird auf Logobild gelegt-->
+                    <span>Artist</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
