--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -58,7 +58,7 @@
                      
                     <li><a href="#">FORUM</a></li>
                      
-                    <li><a href="#">ARTIST</a></li>
+                    <li><a href="/artistListAnsicht.html">ARTIST</a></li>
                      
                     <li><a href="#">ABOUT US</a></li>
                      
