--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -35,7 +35,7 @@
     </div>
       </a>
 <hr class="featurette-divider">  
-<a href="#">
+<a href="/artistListAnsicht.html">
     <div class="row featurette"> 
         <div class="col-md-7">  <h2 class="featurette-heading"> ARTISTS<span class="text-muted"></span></h2>  <p
                 class="lead"></p> 
