--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -22,7 +22,7 @@
                 </div>
             </a>
             <!-- Bsp wie Artistlink einzubinden-->
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -44,42 +44,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-    </div>
-    <div class="row produktShop" >
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt Preis</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt Preis</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt Preis</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
     </div>
     <div class="row produktShop" >
@@ -92,7 +57,42 @@
                     </div>
                 </div>
             </a>
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis</span>
+                    </div>
+                </div>
+            </a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis</span>
+                    </div>
+                </div>
+            </a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
+        </div>
+    </div>
+    <div class="row produktShop" >
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis</span>
+                    </div>
+                </div>
+            </a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#"> Link to Artist</a>
+            <a href="/artistAnsicht.html"> Link to Artist</a>
         </div>
     </div>
 </div>
