--- a/app/tpl/artistAnsicht.hbs
+++ b/app/tpl/artistAnsicht.hbs
@@ -1,7 +1,7 @@
 {{> header title="PTTP"}}
 
-<div class="artistAnsichtmain">
-    {{> main}}
+<div class="main">
+    {{> artistAnsichtmain}}
 </div>
 
 {{> footer}}
