--- a/app/tpl/artistListAnsicht.hbs
+++ b/app/tpl/artistListAnsicht.hbs
@@ -1,7 +1,7 @@
 {{> header title="PTTP"}}
 
-<div class="artistListAnsichtmain">
-    {{> main}}
+<div class="main">
+    {{> artistListAnsichtmain}}
 </div>
 
 {{> footer}}
