Basic Artistansicht /artistlistansicht Platzhalter 3 Kommentare

--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -1,4 +1,4 @@
-<!-- Produnktpräsenationsbereich-->
+<!-- Artsitlistenbereich-->
 <!-- Zur Zeit 3 Reihen a 3 Produkte -->
 <div class="row artistListAnsicht" >
     <div class="aArtist col-md-12">
