Artist List Ansicht sort by  Dropdown hinzugefügt

--- a/app/less/artistListAnsicht.less
+++ b/app/less/artistListAnsicht.less
@@ -1,4 +1,5 @@
 /*Design Bereich der Artistauflistung*/
+
 .artistListAnsicht .artistName span {
   color: #fff;
 }
@@ -30,3 +31,14 @@
   position: relative;
   top: -10px;
 }
+/* Test Button */
+#buttonArtist
+{
+  margin-left: 0px;
+}
+#Collectionwählen
+{
+  margin-left: 5px ;
+  margin-bottom: -2px;
+}
+
