--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -1,5 +1,26 @@
 <!-- Artsitlistenbereich-->
-<!-- Zur Zeit 3 Reihen a 3 Produkte -->
+<div class="artistListSideMenu"
+    <div id = "buttonArtist">
+
+    <ul>
+
+        <ol>
+            <p id = "Collectionwählen"><strong>Sort by Collection</strong></p>
+            <select name="collection">
+                <option value="Wählen"><strong>Wählen</strong></option>
+                <option value="A">Collection A</option>
+                <option value="B">collection B</option>
+                <option value="C">Collection C</option>
+                <option value="D">Collection D</option>
+                <option value="E">Collection E</option>
+            </select>
+
+        </ol>
+    </ul>
+    </div>
+</div>
+
+<!-- Zur Zeit 3 Reihen a 3 Artist -->
 <div class="row artistListAnsicht" >
     <div class="aArtist col-md-12">
         <a class="thumbnail" href="/artistAnsicht.html">
