Artist List Ansicht sort by  little change

--- a/app/less/artistListAnsicht.less
+++ b/app/less/artistListAnsicht.less
@@ -35,6 +35,9 @@
 /* Test Button */
 #buttonArtist
 {
+  position: fixed;
+  left:1px;
+  margin-top:20px;
   margin-left: 0px;
 }
 #Collectionwählen
