--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -1,5 +1,5 @@
 <!-- Artsitlistenbereich-->
-
+<div class="container">
 <div id = "buttonArtist">
 
     <ul>
@@ -133,4 +133,5 @@
             </div>
         </a>
     </div>
+</div>
 </div>
