--- a/app/less/style.less
+++ b/app/less/style.less
@@ -19,33 +19,49 @@ body {
 
 /* Custom page header */
 .header {
-  height: 50px;
+}
+
+.navbar-default {
+  height: 100px;
   width: auto;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #e5e5e5;
+  color: white;
   font-family: "Shree Devanagari 714";
+  allign: central;
 }
 
 .navbar-header {
-  font-family: "Shree Devanagari 714";
-  font-size: 300%;
-  color: #000;
+  margin-top: -100px;
+
+  align: center;
 }
 
-/* Make the masthead heading the same height as the navigation */
+#bild1 {
+  width: 50px;
+  height: 60px;
+}
+
+/* Make the masthead heading the same height as the navigation
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 10px;
-}
+}*/
 
 .jumbotron {
+  padding-top: -20px;
   background-image: url("https://media.giphy.com/media/IIBB5X1izB16/giphy.gif");
-  height: 660px;
-  vertical-align: middle;
-  text-align: center;
+  height: 500px;
 }
 
+/*Text on jumbotron*/
+
+.table {
+  border: 1px solid black;
+}
+
+.tr {
+  height: 40px;;
+}
 .row {
   font-family: "Shree Devanagari 714";
   color: darkred;
