--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -29,11 +29,12 @@
 <body>  
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
+
         <div class="navbar-header"> 
-            <a href="index.html">PTTP</a>
-             
-             
+            <a href="index.html"><img id="bild1"
+                                      src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png"></a>
         </div>
+
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
