--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,10 +1,11 @@
 <div class="jumbotron">
-    <img src="https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/14141937_1604745913152877_1247588643098716822_n.jpg?oh=7171ae087521185f3913a390e6c3b8c9&oe=584911B8">
-    <!--<h1>Power to the People</h1>-->
+    <!--<img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png" width="200" height="100">-->
 </div>
 
 
-       <!-- Marketing messaging and featurettes     ================================================== -->     <!-- Wrap the rest of the page in another container to center all the content. -->       <!-- START THE FEATURETTES -->  
+       <!-- Marketing messaging and featurettes     ================================================== --> 
+<!-- Wrap the rest of the page in another container to center all the content. -->   
+<!-- START THE FEATURETTES -->  
 <hr class="featurette-divider">  
 <a href="#">
     <div class="row featurette"> 
@@ -13,7 +14,8 @@
         </div>
          
         <div class="col-md-5"> 
-            <!--   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                 alt="Generic placeholder image">
              
         </div>
          
@@ -28,7 +30,8 @@
         </div>
          
         <div class="col-md-5 col-md-pull-7"> 
-            <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                 alt="Generic placeholder image">
              
         </div>
          
@@ -42,7 +45,8 @@
         </div>
          
         <div class="col-md-5"> 
-            <!--  <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                 alt="Generic placeholder image">
              
         </div>
          
@@ -58,7 +62,8 @@
         </div>
          
         <div class="col-md-5 col-md-pull-7"> 
-            <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                 alt="Generic placeholder image">
              
         </div>
          
@@ -74,7 +79,8 @@
         </div>
          
         <div class="col-md-5"> 
-            <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+                 alt="Generic placeholder image">
              
         </div>
          
