logo - links und mitte

--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <!--<img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png" width="200" height="100">-->
+    <img id="bild2" , src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png">
 </div>
 
 
