--- a/app/less/style.less
+++ b/app/less/style.less
@@ -28,18 +28,23 @@ body {
   width: auto;
   color: white;
   font-family: "Shree Devanagari 714";
-  allign: central;
-}
-
-.navbar-header {
-  margin-top: -100px;
-
-  align: center;
+  allign: center;
 }
 
 #bild1 {
-  width: 50px;
-  height: 60px;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+#bild2 {
+  width: 50%;
+  height: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+
 }
 
 /* Make the masthead heading the same height as the navigation
