--- a/app/less/style.less
+++ b/app/less/style.less
@@ -24,6 +24,8 @@ body {
 }
 
 .navbar-default {
+  margin-top: -20px;
+  margin-bottom: -20px;
   height: 100px;
   width: auto;
   color: white;
@@ -55,7 +57,6 @@ body {
 }*/
 
 .jumbotron {
-  padding-top: -20px;
   background-image: url("https://media.giphy.com/media/IIBB5X1izB16/giphy.gif");
   height: 500px;
 }
