--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -38,17 +38,17 @@
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
-                <a class="glyphicon glyphicon-user" , class="btn btn-default" href="#"> SIGN UP</a>
+                <a id="button1" , class="glyphicon glyphicon-user" , class="btn btn-default" href="#"> SIGN UP</a>
             </li>
 
             <li>
-                <a class="glyphicon glyphicon-log-in" , class="btn btn-default" href="#"> LOG IN</a>
+                <a id="button2" , class="glyphicon glyphicon-log-in" , class="btn btn-default" href="#"> LOG IN</a>
             </li>
 
             <li class="dropdown"> 
 
 
-                <button class="btn btn-default" ‚ class="dropdown-toggle" data-toggle="dropdown">
+                <button id="button3" , class="btn btn-default" ‚ class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-align-justify"></span></button>
                 <span class="caret"></span></a> 
                 <ul class="dropdown-menu"> 
