--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,5 +1,6 @@
 <div class="jumbotron">
-    <img id="bild2" , src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png">
+    <!--<img id="bild2" , src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/Farbkonzept%204.png">-->
+    <h1 id="pttp">POWER TO THE PEOPLE</h1>
 </div>
 
 
