--- a/app/less/style.less
+++ b/app/less/style.less
@@ -39,7 +39,19 @@ body {
   top: 0;
 }
 
-#bild2 {
+#button1 {
+  top: 0;
+}
+
+#button2 {
+  top: 0;
+}
+
+#button3 {
+  top: 0;
+}
+
+/*#bild2 {
   width: 50%;
   height: 50%;
   display: block;
@@ -47,7 +59,7 @@ body {
   margin-right: auto;
   margin-top: 100px;
 
-}
+}*/
 
 /* Make the masthead heading the same height as the navigation
 .header h3 {
@@ -61,6 +73,11 @@ body {
   height: 500px;
 }
 
+#pttp {
+  font-family: "Shree Devanagari 714";
+  margin-top: 15%;
+  margin-left: 20%;
+}
 /*Text on jumbotron*/
 
 .table {
