--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -46,7 +46,19 @@
     background-color: #e7e7e7;
     padding-right: 39px;
 }
-#leftphoto
+#leftphoto1
+{
+    width: 130px;
+    height: 170px;
+    margin-bottom: 10px;
+}
+#leftphoto2
+{
+    width: 130px;
+    height: 170px;
+    margin-bottom: 10px;
+}
+#leftphoto3
 {
     width: 130px;
     height: 170px;
@@ -63,4 +75,8 @@
     height:20px;
     border-radius:50px;
     background:linear-gradient(to bottom, #FF0000 , #FF0000 )
+}
+#zoom_01{
+    width: 250px;
+    height: 350px;
 }
