--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -17,12 +17,8 @@
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
             <!-- build:css css/app.css --> 
     <link href="css/style.css" rel="stylesheet">
-    <script type="text/javascript" src="Event.js"></script>
-    <script type="text/javascript" src="Magnifier.js"></script>
-    <script type="text/javascript">
-        var evt = new Event(),
-                m = new Magnifier(evt);
-    </script>
+    <script type="text/javascript" src="../../js/jquery.elevatezoom.js"></script>
+    <script type="text/javascript" src="../../js/jquery-1.8.3.min.js"></script>
          <!-- endbuild --> 
 </head>
   <!-- NAVBAR ================================================== --> 
