--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -3,13 +3,13 @@
     <tr>
         <td >
             <div class="leftphoto">
-                <img id= "leftphoto" src=" http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
+                <img id= "leftphoto1" src=" http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img id= "leftphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="First slide">
+                <img id= "leftphoto2" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img id= "leftphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="First slide">
+                <img id= "leftphoto3" src="http://pics4.esprit.de/Shop/PicSPV_ZoomFlat/096EO1F013_110.jpg" alt="First slide">
             </div>
         </td>
         <td>
@@ -75,7 +75,7 @@
         </p></td>
     </tr>
 </table>
-
-
-
-
+<img id="zoom_01" src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" data-zoom-image="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg"/>
+<script>
+    $("#zoom_01").elevateZoom();
+</script>
