--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -13,7 +13,7 @@
         <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
-                <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
+                <img  src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
                         <!-- wird auf Produktbild gelegt-->
